Fix placeholder for the date field, alignment of the trade form and form color of the add trade button in statements

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -37,6 +37,10 @@ body {
   background-color: #e9e9e9;
 }
 
+ #date-input {
+  color: silver;
+}
+
 .table-item a:hover,
 .table-button:hover,
 .trade-btn, 
@@ -111,7 +115,7 @@ body {
 }
 
 .checkbox-field {
-  width: 20%;
+  width: 35%;
 }
 
 .ma-10 {
